--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,12 +56,14 @@ hzero:
     oauth-url: ${HZERO_OAUTH_URL:http://dev.hzero.org:8080/oauth/oauth/authorize}
     skip-service: ${HZERO_SWAGGER_SKIP_SERVICE:register, gateway, oauth}
     gateway-domain: ${HZERO_GATEWAY_DOMAIN:dev.hzero.org:8080}
+    # 配置swagger访问网关的协议【http,https】
+    protocol: ${HZERO_SWAGGER_PROTOCOLS:http}
     fetch-time: ${HZERO_SWAGGER_FETCH_TIME:20}
     fetch-seconds: ${HZERO_SWAGGER_FETCH_SECONDS:30}
 
 logging:
   level:
-    org.apache.ibatis: ${LOG_LEVEL:info}
-    org.hzero: ${LOG_LEVEL:info}
+    org.hzero.mybatis: ${LOG_LEVEL:info}
     org.springframework.web: ${LOG_LEVEL:info}
+  path: ./logs
 
